--- a/manifest.json
+++ b/manifest.json
@@ -13,51 +13,51 @@
   "categories": ["business", "productivity", "utilities"],
   "icons": [
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "192x192",
-      "type": "image/jpeg",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "512x512",
-      "type": "image/jpeg",
+      "type": "image/svg+xml",
       "purpose": "any maskable"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "72x72",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "96x96",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "128x128",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "144x144",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "152x152",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "384x384",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     },
     {
-      "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+      "src": "window_icon_125687.svg",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/svg+xml"
     }
   ],
   "shortcuts": [
@@ -68,7 +68,7 @@
       "url": "/index.html",
       "icons": [
         {
-          "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+          "src": "window_icon_125687.svg",
           "sizes": "96x96"
         }
       ]
@@ -80,7 +80,7 @@
       "url": "/products.html",
       "icons": [
         {
-          "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+          "src": "window_icon_125687.svg",
           "sizes": "96x96"
         }
       ]
@@ -92,7 +92,7 @@
       "url": "/contact.html",
       "icons": [
         {
-          "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+          "src": "window_icon_125687.svg",
           "sizes": "96x96"
         }
       ]
@@ -104,7 +104,7 @@
       "url": "/comments.html",
       "icons": [
         {
-          "src": "WhatsApp Image 2025-07-08 at 17.49.46_02d7f189_1753025271754.jpg",
+          "src": "window_icon_125687.svg",
           "sizes": "96x96"
         }
       ]
