--- a/manifest.json
+++ b/manifest.json
@@ -129,7 +129,7 @@
       "related_applications": [
       {
         "platform": "webapp",
-        "url": "https://kayanfactory.com"
+        "url": "https://kayanfactory.netlify.app"
       }
     ],
   "prefer_related_applications": false,
