--- a/env.example
+++ b/env.example
@@ -23,4 +23,4 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Origins (comma-separated)
-CORS_ORIGINS=https://kayanfactory.netlify.app,http://localhost:3000,http://localhost:8080
+CORS_ORIGINS=https://kayanalkhalij1.github.io,https://kayanalkhalij1.github.io/Kayan-Al-Khalij11,http://localhost:3000,http://localhost:8080
