--- a/nginx.conf
+++ b/nginx.conf
@@ -42,14 +42,14 @@ http {
             proxy_cache_bypass $http_upgrade;
             
             # CORS headers
-            add_header Access-Control-Allow-Origin "https://kayanfactory.netlify.app" always;
+            add_header Access-Control-Allow-Origin "https://kayanalkhalij1.github.io" always;
             add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
             add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
             add_header Access-Control-Allow-Credentials "true" always;
             
             # Handle preflight requests
             if ($request_method = 'OPTIONS') {
-                add_header Access-Control-Allow-Origin "https://kayanfactory.netlify.app";
+                add_header Access-Control-Allow-Origin "https://kayanalkhalij1.github.io";
                 add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS";
                 add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With";
                 add_header Access-Control-Allow-Credentials "true";
