--- a/production.env
+++ b/production.env
@@ -23,7 +23,7 @@ RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
 # CORS Origins (production only)
-CORS_ORIGINS=https://kayanfactory.netlify.app
+CORS_ORIGINS=https://kayanalkhalij1.github.io,https://kayanalkhalij1.github.io/Kayan-Al-Khalij11
 
 # Logging
 LOG_LEVEL=info
