chore: add README, LICENSE, .gitignore, CONTRIBUTING, and CI workflow

--- a/.gitignore
+++ b/.gitignore
@@ -1,351 +1,34 @@
-# Kayan Al Khalij Website - .gitignore
-
-# Dependencies
+# Node
 node_modules/
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+yarn-error.log
+yarn-debug.log
+package-lock.json
+yarn.lock
+.pnpm-debug.log
 
-# Build outputs
+# Build output
 dist/
 build/
 out/
 
-# Environment variables
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+# System
+.DS_Store
+Thumbs.db
 
-# IDE and Editor files
+# IDEs
 .vscode/
 .idea/
-*.swp
-*.swo
-*~
-
-# OS generated files
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# Next.js build output
-.next
-
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
-.cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
-
-# Backup files
-*.bak
-*.backup
-*.old
-*.orig
-*.save
-*.swp
-*.tmp
-
-# Archive files
-*.zip
-*.rar
-*.tar
-*.gz
-*.7z
-
-# Database files
-*.db
-*.sqlite
-*.sqlite3
-
-# Configuration files with sensitive data
-config.php
-database.php
-wp-config.php
-
-# SSL certificates
-*.pem
-*.key
-*.crt
-*.csr
-
-# Backup directories
-backup/
-backups/
-old/
-archive/
-
-# Cache directories
-cache/
-caches/
-
-# Upload directories
-uploads/
-files/
-media/
-
-# Test files
-test/
-tests/
-__tests__/
-*.test.js
-*.spec.js
-
-# Documentation build
-docs/build/
-
-# Local development
-.local
-.localhost
-
-# Performance monitoring
-.webpack/
-
-# Service worker cache
-sw-cache/
-
-# PWA files
-workbox-*.js
-workbox-*.js.map
-
-# Analytics
-analytics/
-stats/
-
-# Security
-.htpasswd
-.htaccess.backup
-
-# Development tools
-.eslintrc.js
-.prettierrc
-.babelrc
-tsconfig.json
-
-# Package manager files
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Editor config
-.editorconfig
-
-# Git hooks
-.git/hooks/
-
-# Local development server
-.serverless/
-.faas/
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
-
-# Optimized files
-*.min.css
-*.min.js
-optimized/
-
-# Lighthouse reports
-lighthouse-report.html
-
-# Performance reports
-performance-report.json
-
-# Accessibility reports
-accessibility-report.json
-
-# SEO reports
-seo-report.json
-
-# Security reports
-security-report.json
-
-# Build artifacts
-*.map
-*.min.*
-
-# Development server
-.serve/
-
-# Hot reload
-.hot/
-
-# Browser sync
-.bs-config.json
-
-# Local SSL certificates
-*.p12
-*.pfx
-
-# Local environment
-.env.local
-.env.development
-.env.test
-.env.production
-
-# IDE specific files
-.vscode/settings.json
-.vscode/launch.json
-.vscode/tasks.json
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/usage.statistics.xml
-.idea/dictionaries/
-.idea/shelf/
-
-# OS specific files
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-$RECYCLE.BIN/
-*.cab
-*.msi
-*.msm
-*.msp
-*.lnk
-
-# Application specific
-*.pid
-*.seed
-*.pid.lock
-.lock-wscript
-build/Release
-.npm
-.eslintcache
-.node_repl_history
-*.tgz
-.yarn-integrity
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# Environment
 .env
-.env.test
+.env.local
+.env.*.local
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
-
-# next.js build output
-.next
-
-# nuxt.js build output
-.nuxt
-
-# vuepress build output
-.vuepress/dist
-
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.* 
+# Misc
+*.log
+coverage/
